# csharp_n_cpp

./: .gitignore
cpp_stuff/app_one/: .editorconfig  CMakeLists.txt  Readme.md  add.cpp  app_one.vcxproj  main.cpp  my_program
cpp_stuff/app_two/: app_two.vcxproj  main.cpp
csharp_stuff/: Readme.md
csharp_stuff/my_wpf_app/: .editorconfig  MainWindow.xaml  MainWindow.xaml.cs  Readme.md
csharp_stuff/my_wpf_app/Resources/: Resources.fr.resx
my_wpf_app/: MainWindow.xaml  MainWindow.xaml.cs  Readme.md  my_wpf_app.csproj
my_wpf_app/Resources/: Resources.resx
